--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "submit-form",
 	"version": "1.0.0",
 	"description": "Submit form data asyncronusly",
-	"main": "submit-form.js",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -10,7 +10,7 @@
 		"type": "git",
 		"url": "git+https://github.com/penhold3r/submit-form.git"
 	},
-	"author": "penholder",
+	"author": "penholder <penhold3r@gmail.com>",
 	"license": "MIT",
 	"bugs": {
 		"url": "https://github.com/penhold3r/submit-form/issues"
