--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "submit-form",
+	"name": "submit-form-data",
 	"version": "1.0.0",
-	"description": "Submit form data asyncronusly",
+	"description": "Submit form data asynchronous",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
